src/objects/TR1__Call_List__c.object
<CustomObject>
    <fields>
        <fullName>Call_List_Status__c</fullName>
        <label>Call List Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Owner__c</fullName>
        <formula>Client__r.Owner.FirstName &amp;&quot; &quot;&amp; Client__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <formula>TEXT (Client__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Call Lists</relationshipLabel>
        <relationshipName>Call_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Call_List_Email_Field__c</fullName>
        <label>Call List Email Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>TR1__Work_Email__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__CandidateContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Candidate Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Call Lists</relationshipLabel>
        <relationshipName>Call_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Total_Members__c</fullName>
        <label>Total Members</label>
        <summaryForeignKey>TR1__Call_List_Member__c.TR1__Call_List__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Call List</label>
    <listViews>
        <fullName>All_Call_Lists_SD</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>TR1__Total_Members__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Call Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Call_lists</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Call_List_Status__c</columns>
        <columns>TR1__Total_Members__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Call_List_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
            <value>Rick Axon,Max Howard,Megan Melia,Hamza Butt,Ali Ismail,Klaudia Kmita</value>
        </filters>
        <label>Manchester Call Lists</label>
        <language>en_US</language>
        <sharedTo>
            <group>Manchester_Primary</group>
            <group>Manchester_branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Becky_Primary</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Becky Primary :)</label>
        <language>en_US</language>
        <sharedTo>
            <group>Southampton_Branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Cardiff_2020</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>2020 cdf</value>
        </filters>
        <label>Cardiff 2020</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Cardiff_clients1</fullName>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>TR1__Call_List_Email_Field__c</columns>
        <filterScope>Mine</filterScope>
        <label>Cardiff clients</label>
        <language>en_US</language>
        <sharedTo>
            <group>Cardiff_branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Christina_A</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>Christina Antoniou</label>
        <language>en_US</language>
        <sharedTo>
            <group>Watford_branch</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Daniel_Parry</fullName>
        <columns>NAME</columns>
        <columns>TR1__Total_Members__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>dparr</value>
        </filters>
        <label>Daniel Parry</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HG1_D2D</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>HG1 D2D</label>
    </listViews>
    <listViews>
        <fullName>HW_reg_event_Nov</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>HW reg event Nov</label>
    </listViews>
    <listViews>
        <fullName>JB_Kirklees_Clear_Candidates</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>TR1__CandidateContact__c</columns>
        <columns>Call_List_Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Candidate</value>
        </filters>
        <label>JB Kirklees Clear Candidates</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>JE_East_Sussex_Business_Managers</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>JE East Sussex Business Managers</label>
    </listViews>
    <listViews>
        <fullName>KB_Call_Lists</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>kbagg</value>
        </filters>
        <label>GM Call Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MK1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>MK1</label>
    </listViews>
    <listViews>
        <fullName>MK171</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <label>MK17!</label>
    </listViews>
    <listViews>
        <fullName>MarieCall_Lists</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>TR1__Total_Members__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>mleon</value>
        </filters>
        <label>MarieCall Lists</label>
        <language>en_US</language>
        <sharedTo>
            <group>Watford_branch</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Call List Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Call Lists</pluralLabel>
    <recordTypes>
        <fullName>TR1__CandidateMarketing</fullName>
        <active>true</active>
        <description>Call list for marketing candidates to clients.</description>
        <label>Candidate Marketing</label>
    </recordTypes>
    <recordTypes>
        <fullName>TR1__Standard</fullName>
        <active>true</active>
        <description>General call list.</description>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>